[gd_scene load_steps=14 format=3 uid="uid://dvvbkqp7eoci4"]

[ext_resource type="Script" uid="uid://ck1pnk71q5c0i" path="res://scripts/ui/finish_screen.gd" id="1_becja"]
[ext_resource type="Texture2D" uid="uid://cvvvomvtcxclq" path="res://assets/sprites/Trophys/bronze_trophy.png" id="1_piuhf"]
[ext_resource type="Texture2D" uid="uid://ds2ojc4otgrvh" path="res://assets/sprites/Trophys/silver_trophy.png" id="2_becja"]
[ext_resource type="Texture2D" uid="uid://cg3btkltf4g3t" path="res://assets/sprites/Trophys/gold_trophy.png" id="3_r2xjp"]
[ext_resource type="Shader" uid="uid://drt5svfv2srgm" path="res://shaders/pause_menu.gdshader" id="4_q8v2q"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_n7mql"]
shader = ExtResource("4_q8v2q")
shader_parameter/lod = 0.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_w2qy4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u4yux"]
content_margin_top = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.458405, 0.458405, 0.458405, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gyfe8"]
content_margin_top = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.396889, 0.396889, 0.396889, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6itvf"]
content_margin_top = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.593134, 0.593134, 0.593133, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
shadow_size = 5

[sub_resource type="Animation" id="Animation_61w2s"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_iwahs"]
resource_name = "blur"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.82]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jw6e5"]
_data = {
&"RESET": SubResource("Animation_61w2s"),
&"blur": SubResource("Animation_iwahs")
}

[node name="Finish_Screen" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_becja")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_n7mql")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="PanelContainer" type="PanelContainer" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -178.0
offset_top = -87.0
offset_right = 178.0
offset_bottom = 226.0
grow_horizontal = 2
grow_vertical = 2

[node name="NinePatchRect" type="NinePatchRect" parent="PanelContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="Trophy3" type="TextureRect" parent="PanelContainer/NinePatchRect"]
z_index = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -53.5
offset_top = -120.0
offset_right = 53.5
offset_bottom = -12.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_piuhf")

[node name="Trophy2" type="TextureRect" parent="PanelContainer/NinePatchRect"]
z_index = 2
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -53.5
offset_top = -120.0
offset_right = 53.5
offset_bottom = -12.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_becja")

[node name="Trophy1" type="TextureRect" parent="PanelContainer/NinePatchRect"]
z_index = 3
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -53.5
offset_top = -120.0
offset_right = 53.5
offset_bottom = -12.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_r2xjp")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
mouse_filter = 0
theme_override_constants/separation = 50

[node name="NextLevel" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 45
theme_override_styles/focus = SubResource("StyleBoxEmpty_w2qy4")
theme_override_styles/hover = SubResource("StyleBoxFlat_u4yux")
theme_override_styles/pressed = SubResource("StyleBoxFlat_gyfe8")
theme_override_styles/normal = SubResource("StyleBoxFlat_6itvf")
text = "Następny Poziom"

[node name="Restart" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 45
theme_override_styles/focus = SubResource("StyleBoxEmpty_w2qy4")
theme_override_styles/hover = SubResource("StyleBoxFlat_u4yux")
theme_override_styles/pressed = SubResource("StyleBoxFlat_gyfe8")
theme_override_styles/normal = SubResource("StyleBoxFlat_6itvf")
text = "Zacznij od Nowa"

[node name="Quit to Menu" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 45
theme_override_styles/focus = SubResource("StyleBoxEmpty_w2qy4")
theme_override_styles/hover = SubResource("StyleBoxFlat_u4yux")
theme_override_styles/pressed = SubResource("StyleBoxFlat_gyfe8")
theme_override_styles/normal = SubResource("StyleBoxFlat_6itvf")
text = "Wróć do Menu"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_jw6e5")
}

[node name="Dead" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -379.0
offset_top = -14.0
offset_right = 374.0
offset_bottom = 123.0
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 4
theme_override_constants/shadow_offset_y = 2
theme_override_font_sizes/font_size = 100
text = "Congratulation!"

[connection signal="pressed" from="PanelContainer/VBoxContainer/NextLevel" to="." method="_on_next_level_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Quit to Menu" to="." method="_on_quit_to_menu_pressed"]
